# flux-messages

./: Cargo.toml  README.md
.github/workflows/: Dockerfile  cd.yaml
lib/api/: Cargo.toml  build.rs
lib/api/src/: lib.rs  messages.proto  notify.proto  streams.proto
lib/migration/: Cargo.toml
lib/migration/src/: entities.rs  lib.rs  m20240927_153528_create_messages.rs  m20240927_154643_create_streams.rs  m20240927_160951_create_messages_streams.rs  m20240927_161006_create_streams_users.rs  m20240928_170119_create_indexes.rs  m20250609_151902_add_locale_to_messages.rs  m20250609_163004_add_locale_to_streams.rs  m20250626_141401_add_messages_count_to_streams.rs
lib/pb/: Cargo.toml  build.rs
lib/pb/src/: lib.rs  streams.proto
settings/: default.toml
src/: app.rs
src/app/: error.rs  messages.rs  settings.rs  state.rs  streams.rs
src/app/messages/: grpc.rs  repo.rs  service.rs  settings.rs
src/app/messages/repo/: message.rs  message_stream.rs  stream.rs  stream_user.rs
src/app/streams/: grpc.rs  messaging.rs  repo.rs  service.rs  settings.rs
src/app/streams/repo/: message_stream.rs  stream.rs  stream_user.rs
