[package]
name = "flux-messages"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib/api", "lib/migration"]
resolver = "2"

[dependencies]
flux-messages-api = { path = "lib/api" }
flux-lib = { git = "https://github.com/thefluxapp/flux-lib.git" }

anyhow = "1.0.98"
thiserror = "2.0.12"
futures-lite = "2.6.0"
config = { version = "0.15", default-features = false, features = ["toml"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v7"] }
chrono = "0.4.40"
log = "0.4.27"
bytes = "1.10.1"
itertools = "0.14.0"

axum = "0.8.3"

tokio = { version = "1.44.2", features = ["full"] }

prost = "0.13.5"
prost-types = "0.13.5"
tonic = "0.13.0"
tonic-health = "0.13.0"
tonic-reflection = "0.13.0"

async-nats = "0.40.0"

sea-orm = { version = "1.1.10", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
